# aegis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml  release.yml
docs/: getting_started.md  usage.md
include/aegis/: aegis_crypto.hpp  file_io.hpp  utils.hpp
src/cli/: main.cpp
src/core/: file_io.cpp  utils.cpp
src/crypto/: aegis_crypto.cpp
tests/: test_roundtrip.cpp
